--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "popper.js": "^1.16.1",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.29.0",
-    "sass-loader": "^10.1.0"
+    "sass-loader": "^10.1.0",
+    "vue-template-compiler": "^2.6.12"
   }
 }
